# colonoscopy-segmentation-reproduction

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
configs/: base.yml
configs/models/: esfpnet.yaml
data/: datamodule.py
data/datasets/: base_dataset.py  kvasir.py
data/downloaders/: __init__.py  base.py  registry.py
data/transforms/: argumentation.py  augmentation.py
evaluation/: metrics.py
models/: base_model.py
scripts/: apply_upstream_overlays.py  bootstrap_upstream_repos.py  create_upstream_envs.py  download_dataset.py  download_hardnet_weights.py  download_kingnet_weights.py  download_mit_weights.py  download_pvt_weights.py  download_swin_weights.py  evaluate_predictions.py  export_predictions.py  prepare_ssformer_weights.py  prepare_upstream_kvasir.py  run_upstream.py  train.py  validate_data.py
src/data/datasets/: base_dataset.py  kvasir.py
src/data/downloaders/: base.py  kvasir.py
src/data/transforms/: augmentation.py
src/evaluation/: metrics.py
src/models/: __init__.py  base_model.py  esfpnet.py
src/training/: losses.py  trainer.py
training/: trainer.py
upstream/: README.md  commands.yaml  repos.yaml
upstream/envs/: cascade.yml  colonformer.yml  esfpnet.yml  hardnet_dfus.yml  hardnet_mseg.yml  metapolyp.yml  ssformer.yml  tganet.yml
upstream/overlays/cascade/: dataloader.py  train_polyp.py  utils.py
upstream/overlays/colonformer/: train.py
upstream/overlays/esfpnet/: kvasir.py
upstream/overlays/hardnet_dfus/: dataloader.py
upstream/overlays/meta_polyp/: train.py
upstream/overlays/ssformer/: kvasir_binary.py
(+1 files in other folders)
