[project]
name = "colonoscopy-segmentation-reproduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "wandb>=0.26.1",
]
